--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@ dateValidator: {
     separator: '-',
     // This will be converted to '2014-01-01 12:00:00 PM'
     minDate: new Date( 2014, 0, 1, 12, 0, 0 ),
-    // Don't use 'new Date( 2016, 0, 1, 11, 59, 59)', use this instead.
-    // It will be converted to: '2016-01-01 11:59:59 PM'
+    // If you want to set maxDate to '2016-01-01 11:59:59 PM', please
+    // don't use 'new Date( 2016, 0, 1, 11, 59, 59)', use this instead.
     maxDate: new Date( 2016, 0, 1, 23, 59, 59 )
 }
 {% endhighlight %}
