Documentation: Updating the note about 'minDate' & 'maxDate' options

--- a/index.html
+++ b/index.html
@@ -536,8 +536,8 @@
     <span class="nx">separator</span><span class="o">:</span> <span class="s1">&#39;-&#39;</span><span class="p">,</span>
     <span class="c1">// This will be converted to &#39;2014-01-01 12:00:00 PM&#39;</span>
     <span class="nx">minDate</span><span class="o">:</span> <span class="k">new</span> <span class="nb">Date</span><span class="p">(</span> <span class="mi">2014</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">12</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">0</span> <span class="p">),</span>
-    <span class="c1">// Don&#39;t use &#39;new Date( 2016, 0, 1, 11, 59, 59)&#39;, use this instead.</span>
-    <span class="c1">// It will be converted to: &#39;2016-01-01 11:59:59 PM&#39;</span>
+    <span class="c1">// If you want to set maxDate to &#39;2016-01-01 11:59:59 PM&#39;, please</span>
+    <span class="c1">// don&#39;t use &#39;new Date( 2016, 0, 1, 11, 59, 59)&#39;, use this instead.</span>
     <span class="nx">maxDate</span><span class="o">:</span> <span class="k">new</span> <span class="nb">Date</span><span class="p">(</span> <span class="mi">2016</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">23</span><span class="p">,</span> <span class="mi">59</span><span class="p">,</span> <span class="mi">59</span> <span class="p">)</span>
 <span class="p">}</span></code></pre></div>
         </div>
