--- a/test/index.html
+++ b/test/index.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>jQuery - Validation Test Suite</title>
-	<link rel="stylesheet" href="qunit/qunit.css">
-	<script src="../lib/jquery.js"></script>
-	<script src="qunit/qunit.js"></script>
-	<script src="../lib/jquery.validate.js"></script>
+	<link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css">
+
+	<script src="../node_modules/qunitjs/qunit/qunit.js"></script>
+	<script src="../node_modules/jquery/dist/jquery.js"></script>
+	<script src="../node_modules/jquery-validation/dist/jquery.validate.js"></script>
 	<script src="../dist/date-validator.js"></script>
 	<script src="test.js"></script>
 </head>
