--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html id="html">
 <head>
 	<meta charset="utf-8">
-	<title>jQuery - Validation Test Suite</title>
+	<title>Date Validator Test Suite</title>
 	<link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css">
 
 	<script src="../node_modules/qunitjs/qunit/qunit.js"></script>
